various logic added

--- a/ngHttp/src/app/app.component.html
+++ b/ngHttp/src/app/app.component.html
@@ -1,6 +1,10 @@
+<ng-template alertContent></ng-template>
 <div class="row">
-  <div class="col-lg-12">
+  <div class="col-lg-7">
     <form #postData="ngForm" (ngSubmit)="onSubmit(postData)" class="form-data">
+      <div *ngIf="isLoading" [innerHTML] = "spinner"></div>
+      
+      <!-- <div class="alert" [ngClass]="isErr ? 'alert-danger' : 'alert-success'" *ngIf="isErr || statusMsg.length>0">{{isErr ? errTxt : statusMsg}}</div> -->
       <div class="form-group">
         <label for="title" class="title">Enter title</label>
         <input type="text" id="title" class="form-control" ngModel name="title" #title>
@@ -10,13 +14,12 @@
         <textarea type="text" cols="5" rows="5" id="desc" class="form-control" ngModel name="desc" #desc></textarea>
       </div>
       <div class="button-wrapper">
-        <button class="btn" type="submit">Post Data</button>
-        <button class="btn" type="button" (click) = "onFetch()">Fetch Data</button>
-        <button class="btn" type="button">Clear</button>
+        <button class="btn btn-success" type="submit">Post Data</button> |
+        <button class="btn btn-primary" type="button" (click) = "onFetch()">Fetch Data</button> |
+        <button class="btn btn-danger" type="button">Clear</button>
       </div>
     </form>
   </div>
-  <div class="alert alert-danger" *ngIf="isErr">{{errTxt}}</div>
 
   <ul class="list-group-item">
     <li class="list-item" *ngFor = "let comment of comments">
