--- a/ngHttp/src/app/dynamic-components/spinner/spinner.component.html
+++ b/ngHttp/src/app/dynamic-components/spinner/spinner.component.html
@@ -1,1 +1,1 @@
-<div class="lds-heart"><div></div><div>{{message}}</div></div>
+<div class="lds-heart" *ngIf="loading" ><div></div><div>{{message}}</div></div>
